Fixing the Image Not Showing

--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 /* styles for the header section */
 
 .profileImg{
-  background-image: url('./assets/profileImg.png');
+  background-image: url('./assets/profileimg.png');
   width: 100%;
   aspect-ratio: 1/1;
   background-position: top center;
